--- a/src/_includes/components/footer.njk
+++ b/src/_includes/components/footer.njk
@@ -25,9 +25,9 @@
       <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" fill="url(#gradientTop)"></path>
       <defs>
         <linearGradient id="gradientTop" x1="0%" y1="0%" x2="100%" y2="0%">
-          <stop offset="0%" style="stop-color:#191F3A;stop-opacity:1" />
-          <stop offset="50%" style="stop-color:#81171F;stop-opacity:0.8" />
-          <stop offset="100%" style="stop-color:#191F3A;stop-opacity:1" />
+          <stop offset="0%" class="gradient-stop-navy-start" />
+          <stop offset="50%" class="gradient-stop-burgundy-middle" />
+          <stop offset="100%" class="gradient-stop-navy-end" />
         </linearGradient>
       </defs>
     </svg>
