--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -85,6 +85,9 @@
     <!-- WhatsApp Contact Button - Global -->
     {% include "components/whatsapp-button.njk" %}
     
+    <!-- Checkout Modal - Global -->
+    {% include "components/checkout-modal.njk" %}
+    
     <!-- Analytics and Performance Scripts -->
     <script src="/assets/js/main.js" defer></script>
 </body>
