feat: add remaining improvements

--- a/src/_includes/components/social-proof.njk
+++ b/src/_includes/components/social-proof.njk
@@ -53,7 +53,7 @@
               </div>
               <div class="p-6">
                 <h3 class="font-lora font-semibold text-lg text-navy-800 mb-2">{{ video.name }}</h3>
-                <p class="font-century text-sm text-navy-800/60">{{ video.profession }} - {{ video.location }}</p>
+                <p class="font-century text-sm text-navy-800/80">{{ video.profession }} - {{ video.location }}</p>
                 <p class="font-century text-sm text-navy-800/80 mt-3">"{{ video.result }}"</p>
               </div>
             </div>
@@ -76,7 +76,7 @@
           </svg>
         </button>
 
-        <div class="carousel-pagination flex space-x-1" data-carousel-pagination role="tablist" aria-label="Indicadores de testemunhos"></div>
+        <div class="carousel-pagination flex space-x-1" data-carousel-pagination aria-label="Indicadores de testemunhos"></div>
 
         <button 
           type="button"
@@ -93,7 +93,7 @@
     </div>
 
     <footer class="text-center mt-16">
-      <p class="font-century text-base italic text-navy-800/50">
+      <p class="font-century text-base italic text-navy-800/70">
         Junte-se às empreendedoras que já transformaram os seus negócios
       </p>
       
