--- a/src/_includes/components/hero.njk
+++ b/src/_includes/components/hero.njk
@@ -27,7 +27,7 @@
   </svg>
 
   <!-- Content Container -->
-  <div class="relative z-20 mx-auto text-center w-full px-4 sm:px-6 lg:px-8 flex flex-col items-center justify-center max-w-3xl py-8 sm:py-12">
+  <div class="relative z-20 mx-auto text-center w-full px-4 sm:px-6 lg:px-8 flex flex-col items-center justify-center max-w-3xl py-8 sm:py-12 will-change-transform">
     
     <!-- Accent Line -->
     <div class="hero-accent mb-2 sm:mb-4 w-full" data-reveal>
